--- a/style.css
+++ b/style.css
@@ -2,10 +2,23 @@
 
 h2 {
     font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 100;
+    font-weight: 300;
 }
 
 div {
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 500;
+}
+
+hr {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+}
+
+#prob_data {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 100;
 }
